# rgb7segdisplay

./: CMakeLists.txt  README.md  otasend.sh  otasend1.sh  otastatus.py  sdkconfig  vernum.tmp
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  factoryreset.c  flashmem.c  homeapp.h  led_strip_example_main.c  rgb7seg.c  rgb7seg.h
